# FinalProjectRecent

./: .clang-format  .editorconfig  .env.example  .gitignore  CMakeLists.txt  DIAGRAMS.md  Doxyfile  README.md  build.sh  coverage.info  schema.sql
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
scripts/: apply-schema.sh  check-db.sh
src/: main.cpp
src/DAL/: AdminOptionsDal.cpp  AdminOptionsDal.h  CustomerOptionsDal.cpp  CustomerOptionsDal.h  LoginDal.cpp  LoginDal.h
src/model/: Account.h  AdminOptions.h  CustomerOptions.h  Login.h
src/ui/: ConsoleUI.h
tests/: MockDal.h  test_account.cpp  test_admin_options.cpp  test_customer_options.cpp  test_login.cpp
